# file-manager

./: Dockerfile  README.md  README_zh.md  START_LOCAL.md  pyproject.toml
docker/: docker-compose.yml
frontend/: nginx.conf  vite.config.ts
frontend/src/components/: Footer.tsx
frontend/src/pages/: Login.tsx
src/api/: documents.py
src/core/: config.py
src/services/: minio_service.py
