[project]
name = "file-manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "wendao-liu", email = "lhytefe@163.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "minio>=7.1.15",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "greenlet>=2.0.2",
    "email-validator>=2.0.0",  # 用于邮箱验证
    "bcrypt>=4.0.1",           # 添加这行用于密码哈希
]

requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
source-includes = ["src"]

[tool.pdm.scripts]
start = "uvicorn src.main:app --reload"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
